# pixela-letters

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  sample.env  setup.py
.github/workflows/: run-linter.yml  run-test.yml
pixela_letters/: __main__.py  date_converter.py  parameters.py  pixela.py
pixela_letters/letters/: __init__.py  alphabet_lowercase.py  alphabet_uppercase.py  symbol_letters.py
tests/unit/: test_date_converter.py  test_transpose_matrix.py
