[tool.poetry]
name = "pixela-letters"
version = "2018.1"
description = "Let's write poems on the Pixela graph!"
authors = ["ryosms <ryo.sms@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pixela_letters"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
