[tool.poetry]
name = "pixela-letters"
version = "2018.1"
description = "Let's write poems on the Pixela graph!"
authors = ["ryosms <ryo.sms@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pixela_letters" }]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.28.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
black = "^23.3.0"
isort = "^5.12.0"
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.flake8]
max-line-length = 119
exclude = [
    "__pycache__"
]
per-file-ignores = [
    "pixela_letters/letters/alphabet_*.py:E743", # ambiguous function
]
